# chalk

./: .gitignore  CLAUDE.md  Makefile  README.md  index.html  package-lock.json  package.json  playwright.config.ts
src/: App.css  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_vector_tables.down.sql  002_vector_tables.up.sql  003_app_settings.up.sql  004_tags_and_library.down.sql  004_tags_and_library.up.sql  005_chat_tables.down.sql  005_chat_tables.up.sql  006_plan_versions.down.sql  006_plan_versions.up.sql  007_fts5_fulltext_search.down.sql  007_fts5_fulltext_search.up.sql  008_reference_docs.down.sql  008_reference_docs.up.sql  009_teaching_templates.down.sql  009_teaching_templates.up.sql  010_ltp_documents.down.sql  010_ltp_documents.up.sql  011_schedule_schema.down.sql  011_schedule_schema.up.sql  012_lesson_plan_dates.down.sql  012_lesson_plan_dates.up.sql
src-tauri/src/: backup.rs  cache.rs  errors.rs  events.rs  feature_flags.rs  lib.rs  library.rs  logging.rs  main.rs  privacy.rs  sentry_integration.rs  updater.rs
src-tauri/src/admin/: mod.rs  oauth.rs
src-tauri/src/chat/: mod.rs  openai.rs  provider.rs
src-tauri/src/connectors/: commands.rs  dispatcher.rs  factory.rs  google_drive.rs  mod.rs  types.rs
src-tauri/src/database/: connection.rs  crud.rs  fts.rs  hybrid.rs  migrations.rs  mod.rs  models.rs  vectors.rs
src-tauri/src/digest/: ltp_parser.rs  mod.rs  parser.rs  template_extractor.rs
src-tauri/tests/: admin_integration.rs
(+69 files in other folders)
