[package]
name = "chalk"
version = "0.1.0"
description = "Chalk — a desktop lesson plan assistant for teachers"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chalk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
zerocopy = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
sentry = { version = "0.35", features = ["backtrace", "panic", "contexts", "reqwest", "rustls"] }
sentry-tracing = "0.35"

[dev-dependencies]
tempfile = "3"

